<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framelayoutSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchViewfragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBanner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:padding="8dp"
            android:text="@string/Search"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>