...
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/ListRecyclerview"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewlist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:fastScrollEnabled="false" >

...
