<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

<ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="52dp">

    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backdropPath"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:fadingEdge="vertical"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_Movie_Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:padding="5dp"
                android:text="Terminator: Dark Fate"
                android:textColor="@color/colorWhite"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/text_Release_Date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="2019"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Movie_Poster"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".40"
                android:clickable="true"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_Moive_Description"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight=".6"
                android:maxLength="300"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="-15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/rating"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="#000000"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/colorLayout"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_Movie_Rating"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:foregroundGravity="center"
                                android:gravity="center"
                                android:textColor="#000000"
                                android:textSize="26sp"
                                android:textStyle="bold"
                                tools:text="7.4" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/Lang"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="#000000"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/flagLayout"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_Movie_Lang"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:foregroundGravity="center"
                                android:gravity="center"
                                android:shadowColor="#FFFFFF"
                                android:shadowDx="3"
                                android:shadowDy="3"
                                android:shadowRadius="3"
                                android:textColor="#000000"
                                android:textSize="26sp"
                                android:textStyle="bold"
                                tools:text="en" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addToList"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/List"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/add_button"
                        android:orientation="vertical" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            android:background="#5e6673" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/recent"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:fastScrollEnabled="false" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>