<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".fragments.Larger_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2d302e"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_Movie_Poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            tools:src="@tools:sample/avatars[3]" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>